fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - orlandokuan.org
    secretName: orlandokuan-tls
  rules:
  - host: orlandokuan.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-chatbot-service
            port:
              number: 8000
